# stock-selector

./: .gitignore  README.md  TODO.md  alembic.ini  bp_sector_analysis.json  pyproject.toml  requirements.txt  run.py  status.md
alembic/: env.py
alembic/versions/: 0001_baseline.py  0002_add_market_resolved_symbol.py  0003_add_analysis_input_hash.py  0004_add_recommendations_table.py  9d24d59211ac_add_settings_table_for_configurable_.py
db/: schema.sql
docs/plans/: 2026-02-08-stock-selector-design.md  2026-02-08-stock-selector-implementation.md
src/: db.py  models.py  models_sa.py
src/analysis/: backtest.py  claude.py  codex.py  engine.py  indicators.py  llm_base.py  opencode.py  prompts.py  scoring.py
src/api/: routes.py  websocket.py
src/scrapers/: base.py  finviz.py  finviz_provider.py  fmp_insider.py  investegate.py  news.py  newsapi.py  openinsider.py  provider.py  sector.py  yahoo.py  yfinance_provider.py
templates/: backtest.html  compare.html  dashboard.html  detail.html  layout.html  settings.html
tests/: test_backtest.py  test_claude.py  test_company_info_autofill.py  test_compare.py  test_db.py  test_dynamic_uk_resolution.py  test_engine.py  test_engine_api_fallback.py  test_fmp_insider.py  test_indicators.py  test_investegate.py  test_llm_base.py  test_migrations.py  test_news.py  test_newsapi.py  test_opencode.py  test_providers.py  test_scoring.py  test_scrapers.py  test_sector.py  test_sector_auto_detection.py  test_settings.py  test_uk_market_fix.py  test_validate_scores.py  test_yfinance_provider.py  test_yfinance_symbol_resolution.py
(+2 files in other folders)
